enhance topicset
